# ACCESS-MOPPy

./: .codacy.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  ACDD_conf.yaml  ACDD_global_attributes.yml  AUTHORS  CHANGELOG.rst  CMIP6_conf.yaml  CMIP6_global_attributes.yml  GettingStartedOcean.ipynb  README.md  acdd_zoe.yaml  custom_acdd.yaml  env.yaml  map_ocean_mon.csv  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test_exact_error.py  test_monthly_fix.py  varlist_ex.yaml
.conda/: environment.yml  meta.yaml
.github/workflows/: cd.yml  ci.yml  full-tests.yml  mopper-conda-release.yaml  mopper-conda.yaml  mopper-pytest.yaml  mopper-test-calcs.yaml  mopper-test-conda.yaml  update_analysis3.yaml
ci/: environment-3.11.yml  environment-3.12.yml  environment-3.13.yml
conda/: enviroment.yaml  environment.yaml  meta.yaml  run_test_coverage.sh  test-env.yaml  testenv.yaml
data/: access.db  latlon_vertices.yaml
data/cmor_tables/: AUS2200_A1hr.json  CM2_mon.json
data/custom-cmor-tables/: ACDD_coordinate.json  CM2_Omon.json  CM2_mon.json
data/mappings/: map_cm2_cm000a_v1.csv  map_ocean_mon_v1.csv
docs/: attr_conf.yaml  calculations.rst  cmip.rst  cmor.rst  cmor_conf.yaml  conf.py  customising.rst  experiment_input.json  gettingstarted.rst  index.rst  install.rst  map_exp1.csv  mop_command.rst  mop_workflow.rst  mopdb.rst  mopdb_command.rst  output.rst  overview.rst  requirements.txt  table_example.json  varlist_example.csv  wrapper.rst
docs/source/: batch_processing.rst  conf.py  getting_started.rst  index.rst
mappings/: map_AM3.csv  map_AM3_v1-0.csv  map_AUS2200.csv  map_aerosol_AM3.csv  map_aerosol_CM2.csv  map_atmos_AM3.csv  map_atmos_CM2.csv  map_atmos_ESM1.5.csv  map_aus2200_v1.csv  map_land_AM3.csv  map_land_CM2.csv  map_land_CM2_v1-0.csv  map_land_ESM.csv  map_land_ESM1.5.csv  map_land_ESM1.5_v1-0.csv  map_ocean_CM2.csv  map_ocean_ESM1.5.csv  map_ocean_OM2.csv  map_ocean_mon_v1.csv  map_seaice_CM2.csv
mappings/working/: map_aerosol.csv  map_land_CM2.csv  map_land_clean.csv  map_ocean_CM2.csv  map_ocean_OM2.csv  map_ocean_mon.csv
mopdb/: __init__.py  mopdb.py  mopdb_utils.py
mopper/: __init__.py  calculations.py  cli.py  cli_functions.py  cmip_utils.py  custom_app.py  mop_setup.py  mop_utils.py  mopdb.py  mopdb_utils.py  mopper.py  mopper_utils.py  setup_utils.py  update_db.py  varlist_ex.yaml
mopper/data/: access.db  cli_db.py  clidb_functions.py
notebooks/: CM2_2d_case.ipynb  CM2_3d_case.ipynb  GettingStartedOcean.ipynb  Getting_started.ipynb  OM2_025_3d_case.ipynb  Tutorial1_CMORisation_ENSO_Recipes.ipynb
notebooks/.ipynb_checkpoints/: Getting_started-checkpoint.ipynb  OM2_025_2d_case-checkpoint.ipynb
src/access-mopper/: calc_seaice.py  mop_setup.py  mopper.py
src/access_mopper/: ACCESS_configurations.yml  __init__.py  _config.py  _version.py  access_mopper.py  atmosphere.py  base.py  batch_cmoriser  batch_cmoriser.py  calc_atmos.py  calc_land.py  calc_seaice.py  cmip6_cmoriser.py  configurations.py  dataclasses.py  driver.py  ocean.py  ocean_supergrid.py  setup_utils.py  tracking.py  utilities.py  vocabulary_processors.py
src/access_moppy/: _version.py  base.py  driver.py  fast_aggregator.py  ocean.py  ocean_supergrid.py  utilities.py  vocabulary_processors.py
src/data/: access.db  access_dump.sql  table2freq.yaml
src/mopdata/: access.db  access_dump.sql  axes_names.yaml  intake_cat_template.json  intake_cat_template.yaml  interval2frq.yaml  land_tiles.yaml  latlon_vertices.yaml  transport_lines.yaml  tstep_delta.yaml  update_db.py.txt
src/mopdb/: mopdb.py  mopdb_class.py  mopdb_map.py  mopdb_utils.py  utils.py
src/mopper/: calc_atmos.py  calc_ocean.py  calc_seaice.py  calc_utils.py  calculations.py  cmip_utils.py  mop_setup.py  mop_utils.py  mopper.py  setup_utils.py
tests/: README.md  conftest.py  pytest.ini  test_calculations.py  test_mop.py  test_mop_setup.py  test_mop_utils.py  test_mopdb.py  test_mopdb_map.py  test_mopdb_utils.py  test_mopper.py  test_mopper_utils.py  test_setup_utils.py  test_smoke.py
tests/e2e/: test_end_to_end.py
tests/integration/: test_batch_integration.py  test_cmoriser_integration.py  test_full_cmorisation.py
tests/mocks/: mock_data.py  mock_files.py  (+1 more)
(+98 files in other folders)
